--- a/pmose-portfolio/package.json
+++ b/pmose-portfolio/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "pdfobject": "^2.2.4",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
